--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:background="@color/background_color"
     android:gravity="center"
+    android:padding="10dp"
     tools:context=".Login">
 
     <TextView
