--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -178,7 +178,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Post"
+                        android:text="Create Group"
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_marginStart="32dp"
