--- a/app/src/main/res/drawable/circle_mask_black.xml
+++ b/app/src/main/res/drawable/circle_mask_black.xml
@@ -5,6 +5,9 @@
     <solid android:color="@android:color/black" />
 
     <!-- Padding around the shape -->
+    <stroke
+        android:width="2dp"
+        android:color="@color/primary" />
     <padding
         android:left="2dp"
         android:top="2dp"
