--- a/app/src/main/res/drawable/skills_background.xml
+++ b/app/src/main/res/drawable/skills_background.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/primary"/>
-    <corners android:radius="50dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <!-- Stroke/border properties -->
+    <stroke
+        android:width="1dp"
+        android:color="@color/primary" />
+
+    <!-- Corner radius -->
+    <corners
+        android:radius="50dp" />
+
+    <!-- Optional: Add solid background color if needed -->
+    <!-- <solid android:color="@color/your_background_color" /> -->
+
 </shape>
