--- a/app/src/main/res/layout/fragment_activity_profile_view.xml
+++ b/app/src/main/res/layout/fragment_activity_profile_view.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".AboutFragmentProfileView">
+    tools:context=".ActivityFragmentProfileView">
+
+    <!-- TODO: Update blank fragment layout -->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical">
-            <RelativeLayout
+            <TextView
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                >
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/post_recycler_view_profile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:padding="8dp" />
-            </RelativeLayout>
+                android:text="@string/hello_blank_fragment" />
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
