--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,13 +4,33 @@
 
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-
     </style>
 
-    <style name="Theme.BDApps" parent="Base.Theme.BDApps" />
+    <style name="Theme.BDApps" parent="Base.Theme.BDApps" >
+        <item name="android:textColor">#000000</item>
+        <item name="android:colorBackground">@color/background_color_light</item>
+    </style>
     <style name="OvalShape" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+    <style name="BottomRoundedShape" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeTopRight">0dp</item>
+        <item name="cornerSizeBottomLeft">20dp</item>
+        <item name="cornerSizeBottomRight">20dp</item>
+    </style>
+    <style name="OverlayViewStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:background">@drawable/gradient_background_white</item>
+    </style>
+    <style name="CoverPhotoBackground">
+        <item name="background">@drawable/blueskybackground</item>
+        <item name="srcCompat">@drawable/blueskybackground</item>
+    </style>
+
+
 
 </resources>
