--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -128,6 +128,7 @@
                         app:layout_constraintTop_toTopOf="@+id/constraintLayout">
 
                         <TextView
+                            android:id="@+id/followerCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="97"
