--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -37,7 +37,7 @@
 
                 <!-- Name -->
                 <TextView
-                    android:id="@+id/nameTextView"
+                    android:id="@+id/nameTextViewProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="User Name"
