--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -73,6 +73,7 @@
                         app:layout_constraintTop_toTopOf="@+id/imageView">
 
                         <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/profile_image"
                             android:layout_width="150dp"
                             android:layout_height="0dp"
                             android:layout_gravity="center"
@@ -87,6 +88,18 @@
                             app:layout_constraintTop_toTopOf="parent"
                             app:shapeAppearanceOverlay="@style/OvalShape" />
 
+                        <ImageButton
+                            android:id="@+id/changeProfilePicBtn"
+                            style="@style/cameraLogo"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:alpha="0.7"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:scaleType="centerInside"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -113,6 +126,7 @@
                             android:layout_height="wrap_content"
                             android:text="last week"
                             android:textSize="16sp" />
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -164,7 +178,7 @@
 
 
                             <TextView
-                                android:id="@+id/textView"
+                                android:id="@+id/nameTextViewProfile"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:alpha="0.8"
@@ -173,7 +187,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/textView2"
+                                android:id="@+id/usernameTextViewProfile"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:alpha="0.6"
