--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -91,7 +91,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/usernameTextViewProfile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingEnd="20dp"
@@ -106,15 +106,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintStart_toStartOf="@+id/textView2"
-                        app:layout_constraintTop_toBottomOf="@+id/textView2">
+                        app:layout_constraintStart_toStartOf="@+id/usernameTextViewProfile"
+                        app:layout_constraintTop_toBottomOf="@+id/usernameTextViewProfile">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            app:layout_constraintStart_toStartOf="@+id/textView2"
-                            app:layout_constraintTop_toBottomOf="@+id/textView2">
+                            app:layout_constraintStart_toStartOf="@+id/usernameTextViewProfile"
+                            app:layout_constraintTop_toBottomOf="@+id/usernameTextViewProfile">
 
                             <ImageView
                                 android:layout_width="35dp"
