--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:orientation="vertical"
-    android:backgroundTint="@color/background_color"
+    android:background="@color/background_color"
     tools:context=".SearchActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:backgroundTint="@color/background_color"
+        android:background="@color/background_color"
         android:layout_weight="1">
 
         <!-- Search Results RecyclerView -->
