--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/cardBackground"
         android:padding="16dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,10 +22,10 @@
             android:gravity="center_vertical"
             android:layout_marginBottom="12dp">
             <ImageView
+                android:id="@+id/profile_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/people"
-
                 android:padding="8dp"/>
             <LinearLayout
                 android:layout_width="0dp"
@@ -69,9 +70,18 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:id="@+id/btn_like"
+                android:visibility="gone"
                 android:src="@drawable/like_not_given"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_marginEnd="8dp"/>
+            <ImageButton
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:id="@+id/btn_share"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/share"
+                android:visibility="gone"
+                />
             <ImageButton
                 android:layout_width="36dp"
                 android:layout_height="36dp"
@@ -80,13 +90,7 @@
                 android:src="@drawable/add_comment"
                 android:layout_marginEnd="8dp"
                 />
-            <ImageButton
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:id="@+id/btn_share"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/share"
-                />
+
         </LinearLayout>
     </LinearLayout>
 
